fix: scrollbars don't work for navs - removing them

--- a/demo/gds/sass/_subnav.scss
+++ b/demo/gds/sass/_subnav.scss
@@ -4,8 +4,6 @@
   .app-subnav {
     position: sticky;
     top: 40px;
-    //TODO - Fix vertical scrolling.. doesn't currently work :|
-    overflow-y: scroll;
   }
 }
 
